# colorwheels

./: .gitignore  LICENSE  MANIFEST.in  README.md  setup.cfg  setup.py
docs/: requirements.txt
docs/source/: color_handling.rst  color_item.rst  colorwheels.rst  colorwheels_config.rst  conf.py  index.rst  using_colorwheels.rst  wheel_item.rst  yaml_definitions.rst
src/colorwheels/: __init__.py  color_item.py  colorwheels.py  colorwheels_config.py  config.py  singleton.py  wheel_item.py
src/examples/: basic_wheels.yml  example1.py  example2.py  example3.py  example4.py
