[metadata]
name = colorwheels
version = 0.0.1
author = Quantum Spaces
author_email = quantumspaces@outlook.com
description = colorwheels - an endless color generator
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/quantumspaces/colorwheels/
project_urls =
    Bug Tracker = https://github.com/pypa/colorwheels/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.7

[options.packages.find]
where = src
